fix vertical scrollbar in packs bottom bar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -155,7 +155,7 @@ div#magane {
 			width: 100%;
 			height: 50px;
 			background: $backgroundSecondary;
-			overflow: auto;
+			overflow: auto hidden;
 
 			div.packs-wrapper {
 				white-space: nowrap;
